# jsonl2jsons

./: .gitignore  CMakeLists.txt  README.md  jsonl2jsons.c  jsonl2jsons.h  jsonl2jsons_append.h  jsonl2jsons_append_len.h  jsonl2jsons_append_len_test.c  jsonl2jsons_append_rows.h  jsonl2jsons_append_rows_test.c  jsonl2jsons_append_test.c  jsonl2jsons_init.h  jsonl2jsons_init_test.c
.github/workflows/: ccpp.yml  codecov.yml
testdata/: e1.json  e2.json  i1.jsonl  i2.jsonl
